--- a/VillaWeb/appsettings.json
+++ b/VillaWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=localhost;Port=3306;User ID=root;Password=123456;Database=villa_db;"
+  }
 }
